# Khora

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: glad.cmake  glfw.cmake  imgui.cmake  lib.cmake  rtmidi.cmake  stb.cmake
src/emulator/: CMakeLists.txt  main.cpp  main_window.h
src/monitor/: main.cpp
